[package]
name = "fireplace-deluxe"
version = "0.1.1"
edition = "2021"
description = "A cozy fireplace in your terminal"
authors = ["isaiahpettingill <git.wolverine899@passfwd.com>"]
license = "MIT"
homepage = "https://github.com/isaiahpettingill/fireplace-deluxe"
repository = "https://github.com/isaiahpettingill/fireplace-deluxe"
exclude = [
    "Cargo.lock",
    "automata/**",
    "img/**",
    "demo.gif",
    "demo.webm",
    "fireplace.zip",
    "Dockerfile",
    "cross.dockerfile",
    "Makefile",
    "justfile",
    ".niceheader",
]

[[bin]]
name = "fireplace-deluxe"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"